Zen4orce/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup to the Batch that this contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Contact&apos;s mailing fields are filled with.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this option excludes the contact from emails and phone calls.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Formal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Informal Greeting.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will exclude this contact from the Household Name.</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of the earliest soft credit.</description>
        <inlineHelpText>The amount of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of the earliest soft credit.</description>
        <inlineHelpText>The date of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of the largest soft credit.</description>
        <inlineHelpText>The amount of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of the largest soft credit.</description>
        <inlineHelpText>The date of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of the most recent soft credit.</description>
        <inlineHelpText>The amount of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of the most recent soft credit.</description>
        <inlineHelpText>The date of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>Total amount for all soft credits that closed in the last N days. The value of N is defined in the NPSP Settings tab.</description>
        <inlineHelpText>Total amount for all soft credits that closed in the last N days. The value of N is defined in the NPSP Settings tab.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits last year.</description>
        <inlineHelpText>The number of soft credits last year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits this year.</description>
        <inlineHelpText>The number of soft credits this year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits 2 years ago.</description>
        <inlineHelpText>The number of soft credits 2 years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The number of soft credits.</description>
        <inlineHelpText>The number of soft credits.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Automatically checked if the Contact is the Primary Contact on their Account.</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>This is is checked if the user is the Primary Contact on their Account.  The Primary Contact can be edited on the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of Soft Credit, closed in the last number of days defined in NPSP Settings.</description>
        <inlineHelpText>The total amount of Soft Credit, closed in the last number of days defined in NPSP Settings.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_Layout</fullName>
        <active>true</active>
        <label>Contact Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_NPSP</fullName>
        <active>true</active>
        <label>Contact NPSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Sales</fullName>
        <active>true</active>
        <label>Contact (Sales)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Support</fullName>
        <active>true</active>
        <label>Contact (Support)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(AccountId), NOT(ISBLANK(MailingPostalCode)),  MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode )</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Mailing postal code is not same as account&apos;s shipping address</errorMessage>
    </validationRules>
</CustomObject>